--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,39 +1,43 @@
-apply plugin: "com.android.application"
-apply plugin: "kotlin-android"
-apply plugin: "kotlin-android-extensions"
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '23.0.2'
 
     defaultConfig {
-        applicationId "com.saschahuth.brewy"
+        applicationId 'com.saschahuth.brewy'
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     sourceSets {
-        main.java.srcDirs += "src/main/kotlin"
+        main.java.srcDirs += 'src/main/kotlin'
     }
 }
 
 dependencies {
-    testCompile "junit:junit:4.12"
-    compile "com.android.support:appcompat-v7:23.1.1"
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.1.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "org.greenrobot:eventbus:3.0.0"
-    compile "com.squareup.picasso:picasso:2.5.2"
-    compile "uk.co.chrisjenx:calligraphy:2.1.1-SNAPSHOT"
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'uk.co.chrisjenx:calligraphy:2.1.1-SNAPSHOT'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
 }
 buildscript {
-    ext.kotlin_version = "1.0.0-rc-1036"
+    ext.kotlin_version = '1.0.0-rc-1036'
     repositories {
         mavenCentral()
     }
