restructured model; added api call interceptor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,11 @@ android {
     defaultConfig {
         applicationId 'com.saschahuth.brewy'
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName '1.0'
+
+        buildConfigField "String", "BREWERY_DB_API_KEY", "\"$breweryDbApiKey\""
     }
     buildTypes {
         release {
