--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.facebook.fresco:fresco:0.9.0'
     compile 'uk.co.chrisjenx:calligraphy:2.1.1-SNAPSHOT'
     compile 'com.android.support:design:23.1.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
