--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,20 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.0.0-beta5'
+    }
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+
+repositories {
+    mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+}
 
 android {
     compileSdkVersion 23
@@ -14,6 +28,9 @@ android {
         versionName '1.0'
 
         buildConfigField "String", "BREWERY_DB_API_KEY", "\"$breweryDbApiKey\""
+        buildConfigField "String", "MAPBOX_API_KEY", "\"$mapboxApiKey\""
+        resValue "string", "breweryDbApiKey", "\"$breweryDbApiKey\""
+        resValue "string", "mapboxApiKey", "\"$mapboxApiKey\""
     }
     buildTypes {
         release {
@@ -37,6 +54,9 @@ dependencies {
     compile 'uk.co.chrisjenx:calligraphy:2.1.1-SNAPSHOT'
     compile 'com.android.support:design:23.1.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:3.2.0@aar') {
+        transitive = true
+    }
 }
 buildscript {
     ext.kotlin_version = '1.0.0'
