--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,11 @@
 buildscript {
+    ext.kotlin_version = '1.0.0'
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0-beta5'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -23,19 +25,19 @@ android {
     defaultConfig {
         applicationId 'com.saschahuth.brewy'
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName '1.0'
 
         buildConfigField "String", "BREWERY_DB_API_KEY", "\"$breweryDbApiKey\""
-        buildConfigField "String", "MAPBOX_API_KEY", "\"$mapboxApiKey\""
+        buildConfigField "String", "GOOGLE_MAPS_API_KEY", "\"$googleMapsApiKey\""
         resValue "string", "breweryDbApiKey", "\"$breweryDbApiKey\""
-        resValue "string", "mapboxApiKey", "\"$mapboxApiKey\""
+        resValue "string", "googleMapsApiKey", "\"$googleMapsApiKey\""
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     sourceSets {
@@ -50,23 +52,10 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.facebook.fresco:fresco:0.9.0'
+    //compile 'com.facebook.fresco:fresco:0.9.0'
     compile 'uk.co.chrisjenx:calligraphy:2.1.1-SNAPSHOT'
     compile 'com.android.support:design:23.1.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:3.2.0@aar') {
-        transitive = true
-    }
-}
-buildscript {
-    ext.kotlin_version = '1.0.0'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-repositories {
-    mavenCentral()
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
 }
