--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.BreweryDetailsActivity"
-            android:label="@string/app_name" />
+            android:name=".ui.activity.LocationDetailsActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".ui.activity.MainActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
