--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,11 +60,10 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.facebook.fresco:fresco:0.9.0'
     compile 'uk.co.chrisjenx:calligraphy:2.1.1-SNAPSHOT'
     compile 'com.android.support:design:23.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.sothree.slidinguppanel:library:3.2.1'
     compile 'com.github.grandstaish.paperparcel:paperparcel:1.0.0-beta1'
