--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         <activity
             android:name=".ui.activity.LocationDetailsActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".ui.activity.MainActivity" />
+            android:parentActivityName=".ui.activity.MainActivity"
+            android:theme="@style/Theme.Brewy.Slidr" />
 
         <meta-data
             android:name="com.google.android.gms.version"
