--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 import groovy.transform.Field
 
 buildscript {
-    ext.kotlin_version = '1.0.0'
+    ext.kotlin_version = "1.0.0"
     repositories {
         mavenCentral()
     }
@@ -56,21 +56,48 @@ android {
     }
 }
 
+@Field
+String supportLibraryVersion = "23.2.0",
+       kotlinVersion = "1.0.0"
+
 dependencies {
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+
+    // google
+    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:design:$supportLibraryVersion"
+    compile "com.android.support:design:$supportLibraryVersion"
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
+
+    // dagger
+    compile 'com.google.dagger:dagger:2.0.2'
+    kapt 'com.google.dagger:dagger-compiler:2.0.2'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+
+    // network
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'uk.co.chrisjenx:calligraphy:2.1.1-SNAPSHOT'
-    compile 'com.android.support:design:23.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+
+    // image
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.google.android.gms:play-services-maps:8.4.0'
+    compile 'com.github.bumptech.glide:okhttp-integration:1.4.0'
+
+    // reactive
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.trello:rxlifecycle:0.5.0'
+    compile 'com.trello:rxlifecycle-components:0.5.0'
+
+    // ui
     compile 'com.sothree.slidinguppanel:library:3.2.1'
     compile 'com.r0adkll:slidableactivity:2.0.5'
+    compile 'uk.co.chrisjenx:calligraphy:2.1.1-SNAPSHOT'
+
+    // helper
+    compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.github.grandstaish.paperparcel:paperparcel:1.0.0-beta1'
     kapt 'com.github.grandstaish.paperparcel:compiler:1.0.0-beta1'
 }
