--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Brewy">
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,9 +35,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.LocationDetailsActivity"
+            android:name=".ui.locationDetails.LocationDetailsActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".ui.activity.MainActivity"
+            android:parentActivityName=".ui.main.MainActivity"
             android:theme="@style/Theme.Brewy.Slidr" />
 
         <meta-data
